eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simplebank
spec:
  selector:
    app: simplebank
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
